Added forgotten files int make dist target.

--- a/Makefile.am
+++ b/Makefile.am
@@ -125,6 +125,7 @@ libopcuaserver_la_SOURCES = \
 	src/server/standard_namespace.cpp \
 	src/server/tcp_server.cpp \
 	src/server/tcp_server.h \
+	src/server/timer.h \
 	src/server/utils.h \
 	src/server/xml_address_space_loader.cpp \
 	src/server/xml_address_space_loader.h \
@@ -223,6 +224,7 @@ protocolinclude_HEADERS = \
   include/opc/ua/protocol/types.h \
   include/opc/ua/protocol/variable_access_level.h \
   include/opc/ua/protocol/variant.h \
+  include/opc/ua/protocol/variant_visitor.h \
   include/opc/ua/protocol/view.h
 
 libopcuaprotocol_la_SOURCES = \
@@ -446,8 +448,6 @@ EXTRA_DIST = \
   tests/server/common.cpp \
   tests/server/common.h \
   tests/server/configs \
-  tests/server/test_addon.cpp \
-  tests/server/test_addon.h \
   tests/server/base_node.xml \
   tests/server/configs/test_addon.conf \
   tests/server/empty.xml \
