Some cmake variables had invalid syntax.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,11 +27,11 @@ option(BUILD_TESTING "" ON)
 if(WIN32)
     option(BOOST_ROOT "boost root directory." "")
 
-    SET(gtest_force_shared_crt "Use shared (DLL) run-time lib even when Google Test is built as static lib." ON)
-    SET(STATIC_LIBRARY_CXX_FLAGS "Static library compile flags" /MDd)
-    SET(EXECUTABLE_CXX_FLAGS "Static library compile flags" /MDd)
-    SET(DYNAMIC_LIBRARY_CXX_FLAGS "Static library compile flags" /MDd)
-    SET(D "Static library compile flags" /D)
+    SET(gtest_force_shared_crt ON)
+    SET(STATIC_LIBRARY_CXX_FLAGS  /MDd)
+    SET(EXECUTABLE_CXX_FLAGS /MDd)
+    SET(DYNAMIC_LIBRARY_CXX_FLAGS /MDd)
+    SET(D  /D)
     SET(ADDITIONAL_LINK_LIBRARIES Wininet.lib)
     SET(OS_SUFFIX _win)
     STRING(REGEX REPLACE "/" "\\\\\\\\" DYNAMIC_ADDON_PATH "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/Debug/test_dynamic_addon.dll")
